--- a/html/Tableau.html
+++ b/html/Tableau.html
@@ -17,6 +17,9 @@
             </span>
         </div>
 
+            
+        </div>
+
         <div class= "common tableau">
                 <div class='tableauPlaceholder' id='viz1649805204576' style='position: relative'><noscript><a href='#'><img alt='Profits in the US states ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Pr&#47;ProfitsintheUSstates&#47;Sheet1&#47;1_rss.png' 
                     style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' 
