--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--Allison Korth, 4/12/22-->
+<!--Allison Korth, 4/13/22-->
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -91,7 +91,7 @@
                     <!-- Divider-->
                     <hr class="my-4" />
                     <!-- Pager-->
-                    <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase blockcolor" href="html/about.html"> <h4>More about me </h4>→</a></div>
+                    <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase blockcolor" href="html/about.html"> More about me →</a></div>
                 </div>
                 <a href="#top" class="font" style="font-size: smaller;"> back to top </a>
             </div>
