--- a/html/resume.html
+++ b/html/resume.html
@@ -108,6 +108,7 @@
                             </li>
                             <li>Flowchart Diagramming</li>
                             <li>Entity Relationship Diagramming</li>
+                            <li> Slack</li>
                         </ul>
                     </div>
                     <a href="#top" class="font"style="font-size: smaller;"> back to top </a>
